--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  cloud_firestore:
+  firebase: ^9.0.1
+  intl: ^0.17.0
   flutter:
     sdk: flutter
 
